@@ -3,5 +3,6 @@
 *.lo
 *.slo
 apriconv.exports
+exports.c
 apr_iconv_private.h.in
 apr_iconv_private.h
